@@ -14,7 +14,8 @@ error.message.no-route-to-host=The Subversion server could not be contacted. If 
 functionlinks.error.message=No function link style for pagename {0}
 search.text=Search current directory and below
 search.button.tooltip=Search current directory and below
-search.button.disabled.tooltip=Index is being updated!
+search.button.isindexing.tooltip=Index is being updated!
+search.button.disabled.tooltip=Search only possible in HEAD
 showlog.button.text=Show log
 showlog.button.tooltip=Show log for {0}
 download.button.text=Download
@@ -22,6 +23,9 @@ diffprev.button.text=Diff to previous
 diffprev.button.tooltip=Diff this file revision ({0}) to previous
 showlocks.button.text=Show locks
 flatten.button.text=Flatten dir
+flatten.button.tooltip=Flatten directory structure from current location
+flatten.button.isindexing.tooltip=Index is being updated!
+flatten.button.disabled.tooltip=Flatten only possible in HEAD
 showfile.button.text=Show file
 showrawfile.button.text=Show raw
 showrawfile.button.tooltip=Show the unprocessed file
